--- a/packages/frontends/portal-app/package.json
+++ b/packages/frontends/portal-app/package.json
@@ -9,8 +9,12 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "resolutions": {
+    "webpack": "^5.0.0"
+  },
   "private": true,
   "dependencies": {
+    "@angular-architects/module-federation": "^1.2.3",
     "@angular/animations": "~11.2.0",
     "@angular/common": "~11.2.0",
     "@angular/compiler": "~11.2.0",
@@ -19,6 +23,7 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "bootstrap": "^4.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
